Fix: Keep nav toggle single line and remove dropdown on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,6 +376,14 @@ ol li {
     }
 }
 
+@media (max-width: 335px) {
+
+    .logo {
+        width: 100px;
+        font-size: 36px;
+    }
+
+}
 /*---------------------------------  Color Pallette 
 
 #pal2-col1 {
